# claudectx

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
packaging/chocolatey/: [Content_Types].xml  claudectx.nuspec
packaging/chocolatey/_rels/: .rels
packaging/chocolatey/package/services/metadata/core-properties/: metadata.psmdcp
packaging/chocolatey/tools/: chocolateyinstall.ps1  chocolateyuninstall.ps1
packaging/homebrew/: claudectx.rb
packaging/scoop/: claudectx.json
src/: config.rs  launcher.rs  login.rs  main.rs  profiles.rs  ui.rs
tests/: e2e.rs
